--- a/KADAI/KADAI.vcxproj.filters
+++ b/KADAI/KADAI.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="ソース.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ソース1.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
